pdf исправно работает

--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -20,6 +20,9 @@
                 <div class="form-group">
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{ field }}
+                    {% if field.help_text %}
+                    <small class="form-text text-muted">{{ field.help_text }}</small>
+                    {% endif %}
                     {% if field.errors %}
                     <div class="error-message">
                         {{ field.errors }}
