--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
     <div class="back-button-container" style="margin-bottom: 20px;">
-        <a href="{% url 'orders:orders' %}" class="button back-button">← Вернуться к списку заказов</a>
+        <a href="{% url 'orders:orders' %}" class="button back-button">← Вернуться назад</a>
     </div>
 
     <div class="order-form">
