--- a/orders/templates/orders/clients.html
+++ b/orders/templates/orders/clients.html
@@ -178,6 +178,7 @@ function deleteClient(clientId, clientName) {
     gap: 4px;
     align-items: center;
     white-space: nowrap;
+    justify-content: center;
 }
 
 .button {
@@ -296,6 +297,12 @@ th {
 
 .button:hover {
     background-color: #005bb5;
+}
+
+/* Добавляем стиль для выравнивания столбца действий */
+th:last-child, 
+td:last-child {
+    text-align: center;  /* Выравнивание по центру */
 }
 </style>
 {% endblock %}
