--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
             }
 
             .header-title {
-                font-size: 16px; /* Уменьшаем размер шрифта */
+                font-size: 14px; /* Уменьшаем размер шрифта еще больше */
                 padding-right: 10px;
             }
 
